# transcribe-audio

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
skills/transcribe-audio-to-vault/: SKILL.md
skills/transcribe-audio-to-vault/scripts/: walky_talky_ledger.py
src/: main.rs
tests/: test_cli.py  test_walky_talky_ledger.py
transcribe_audio/: __init__.py  cli.py
