[package]
name = "transcribe-audio"
version = "0.1.0"
edition = "2024"
description = "Local audio transcription wrapper around ffmpeg and whisper-cli."
license = "MIT"
repository = "https://github.com/HanifCarroll/transcribe-audio"
homepage = "https://github.com/HanifCarroll/transcribe-audio"
readme = "README.md"
keywords = ["audio", "transcription", "whisper", "cli", "agents"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "8"
