[project]
name = "transcribe-audio"
version = "0.1.0"
description = "Local audio transcription workbench for agents using MLX Whisper by default."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["audio", "transcription", "whisper", "mlx", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]

[project.scripts]
transcribe-audio = "transcribe_audio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transcribe_audio"]
